# DimaTechLtd

./: .dockerignore  .env.example  Makefile  README.md  alembic.ini  config.py  database.py  pyproject.toml  server.py
app/: auth.py  factory.py  middleware.py
app/db/: __init__.py  base.py  session.py
app/db/seeds/: __init__.py  __main__.py  accounts.py  payments.py  users.py
app/exceptions/: __init__.py  auth.py  user.py  webhook.py
app/factories/: __init__.py  account.py  payment.py  user.py
app/helpers/: auth.py  signature.py
app/lifecycle/: __init__.py
app/middleware/: __init__.py  auth.py
app/models/: __init__.py  account.py  payment.py  user.py
app/requests/: __init__.py  create_user.py  update_user.py  webhook_payment.py
app/resources/: __init__.py  account.py  payment.py  token.py  user.py  user_with_accounts.py  webhook_result.py
app/routes/: __init__.py  admin.py  auth.py  users.py  webhook.py
app/services/: __init__.py  admin_service.py  auth_service.py  user_service.py  webhook_service.py
docker/: Dockerfile  docker-compose.yml  entrypoint.sh
docker/nginx/: nginx.conf
migrations/: env.py
migrations/versions/: 1dabd2d22c12_create_payments_table.py  b62f7578929b_create_users_table.py  f134523b2cf2_create_accounts_table.py
tests/: conftest.py  test_webhook_concurrency.py
tests/routes/: test_admin.py  test_auth.py  test_users.py  test_webhook.py
