[project]
name = "dimatechltd"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.18.5",
    "asyncpg>=0.31.0",
    "bcrypt>=5.0.0",
    "factory-boy>=3.3.3",
    "pydantic>=2.0.0",
    "pyjwt>=2.13.0",
    "python-dotenv>=1.2.2",
    "sanic>=25.12.1",
    "sanic-ext>=24.12.0",
    "sqlalchemy[asyncio]>=2.0.51",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "ruff>=0.14.0",
    "sanic-testing>=24.6.0",
]

[tool.ruff]
line-length = 110
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = [
    "ignore::DeprecationWarning:sanic",
    "ignore::DeprecationWarning:sanic_testing",
    "ignore::DeprecationWarning:uvloop",
    "ignore::DeprecationWarning:websockets",
]
